--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 </head>
 <body>
     <nav>
@@ -15,5 +16,65 @@
             <li><a href="#">Updates</a></li>
         </ul>
     </nav>
+
+    <div class="content">
+        <div class="content-head">
+            <h1>About</h1>
+            <div id="span"></div>
+        </div>
+
+        <section class="aboutUs">
+            <h2>About Us</h2>
+            <div id="hr"></div>
+
+            <div class="aboutUs-cnt">
+                <p>Us... Well, there’s no us, it’s just me on my lonesome. But that’s ok, at least I don’t have to put up with some jackass trying to ruin my lovely site at every opportunity and fu— Oh... I’ve forgotten to introduce myself again, haven’t I?
+
+                Hello. I’m Ross Shannon, a 26 year old guy from Ireland. I’m currently studying for a Ph.D. in Computer Science. I’ve been learning all
+            </p>
+            <img src="./ross-shannon3.jpg" />
+            <p>about web design for a good few years now, so I put together the site you see before you.
+
+                If you want to keep up with changes around here, the <a>updates</a> page is the place to be. You could also <a href=""><i class="bi bi-envelope"></i> send me mail.</a>   I maintain a sparsely-updated eponymous <a href="">blog</a> , and if you’re into all that, you can also <a href="">follow me on twitter.</a> 
+            </p>
+            </div>
+        </section>
+
+        <section class="advertise">
+            <h2>Advertise</h2>
+            <div id="hr"></div>
+
+            <div class="advertise-cnt">
+                <strong>HTML Source</strong> HTML Source is well-loved by young and old alike, receiving over a quarter of a million unique visitors and over half a million (500,000+) pageviews every month. We have ad spaces ready to rock, and are happy to strike a deal with interested advertisers who wish to highlight a product our readers might be interested in.
+                <a href="./google-analytics-graph-octnov09.png"><img src="./google-analytics-graph-octnov09.png" /></a>
+                Ads will be placed to the right of the tutorial content. Please <a>contact Ross</a> with the details of the product you would like to advertise.
+            </div>
+        </section>
+
+        <section class="copyright">
+            <h2>Copyright Boredom</h2>
+            <div id="hr"></div>
+
+            <div class="copyright-cnt">
+                <p>
+                    If there’s anything here you want to use, all you have to do is email me and ask. I’m a reasonable guy, <a href="#">just be nice</a>. Bear in mind that we probably won’t allow you to republish tutorials from this site on your own, but selective quoting of passages online or in reports for college and so forth is all fine and dandy.
+                </p>
+                <p>
+                    Any of the code in the tutorials is free to use in your own sites of course, as is the site’s stylesheet. Also, if you want to link to <strong>HTML Source</strong>  or any of the contained tutorials, you’re more than welcome to; there’s no need to ask permission.
+                </p>
+                <p>   
+                    If you have the skills to translate one of the tutorials on this site into another language, please do so! I would love to see more of the articles being translated. You can host the translated copy yourself and I will link to you from the original, so everybody wins.
+                </p>
+                <p>  
+                    Teachers of all varieties: if you’d like to print out copies of tutorials to disseminate to your class, feel free to do so. If possible, please add a link to <strong>HTML Source</strong> from your course webpage. <a href="#">Drop me a note</a> and tell me about it if you like. Thanks.
+                </p>
+            </div>
+        </section>
+    </div>
+
+    <footer>
+        <a href="#" id="a">Go to top <i class="bi bi-arrow-up-short"></i></a>
+        <p>2000 - 2023 <a href="#">Whoever Shannon</a></p>
+    </footer>
 </body>
 </html>
